2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified Base64Encode() of utility.c so that it returns the number of
    characters encoded. This avoids having to invoke strlen() on possibly
    megabytes of data.

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fixed compilation error with Sun Workshop compiler (wmf.c).

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Implement polypolygon support in WMF renderer.  Requires libwmf
    0.2.4 with draw_polypolygon IPA callback.

2002-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added --enable-ccmalloc configure option.

2002-05-09  Cristy  <cristy@mystic.es.dupont.com>
  * DCM patch provided by Shane Blackett.

2002-05-07  Cristy  <cristy@mystic.es.dupont.com>
  * Lock mutex when destorying a SemaphoreInfo structure (patch provided
    by William Radcliffe).
  * Added mingw patches provided by Derry Bryson.

2002-05-05  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5-1 released.

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * Subimage specification did not work for TIFF (e.g.
    convert 'image.tiff[1]' image.png).

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5 released.

2002-04-20  Cristy  <cristy@mystic.es.dupont.com>
  * Added magic string detection for the FPX format (patch provided by
    Marc).

2002-04-18  Cristy  <cristy@mystic.es.dupont.com>
  * Added ExceptionInfo parameter to C API method, QueryColorDatabase().

2002-04-17  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed all known bugs with the IMDisplay utility for Windows.

2002-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac (libtool_build_static_libs): Added
    --enable-delegate-build option to suuport building ImageMagick
    using delegate libraries in subdirectories of the ImageMagick source
    directory.

2002-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>